Scrollbar fix
sanity is saved

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body {
     margin: 0;
 }
+
+canvas {
+    float: left; /* To stop scrollbars from driving me mad */
+}
